fix error with switch

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           <h3><span>Send Email Notifications</span></h3>
           <div class="onoffswitch-1">
             <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox-1" id="email-notif" checked>
-            <label class="onoffswitch-label-1" for="myonoffswitch">
+            <label class="onoffswitch-label-1" for="email-notif">
                 <span class="onoffswitch-inner-1"></span>
                 <span class="onoffswitch-switch-1"></span>
             </label>
